tests/negative/gold/named3-test.gold
tests/negative/named3-test.toit:8:5: error: Named parameters can not start with 'no-'
foo --no-x:
    ^~~~~
tests/negative/named3-test.toit:13:3: error: Unexpected --no-
  --no-x
  ^~~~~
Compilation failed
